# 111

./: .dockerignore  .env.example  .gitignore  DesignStyle.md  README.md  compose.production.yml  docker-compose.yml  package.json  playwright.config.ts  pnpm-lock.yaml
backend/: .dockerignore  .env.example  .gitignore  API.md  Dockerfile  README.md  alembic.ini  compose.yml  docker-entrypoint.sh  pyproject.toml
backend/app/: __init__.py  config.py  database.py  dependencies.py  main.py  models.py  schemas.py  security.py  seed.py  seed_catalog.py
backend/app/admin/: __init__.py  imports.py  router.py  routes.py
backend/app/api/: __init__.py  auth.py  catalog.py  discovery.py  events.py  favorites.py  interactions.py  map.py  presenters.py  profile.py  review_support.py  reviews.py  router.py  uploads.py
backend/app/services/: __init__.py  accounts.py  campuses.py  deepseek.py  hierarchy.py  idempotency.py  map_clusters.py  moderation.py  pagination.py  profiles.py  ratings.py  recommendations.py
backend/migrations/: env.py
backend/migrations/versions/: 20260718_0001_initial.py  20260718_0002_campus_isolation_and_idempotency.py
backend/scripts/: export_openapi.py
backend/tests/: conftest.py  test_auth_and_guest.py  test_deepseek_contract.py  test_reviews_and_admin.py  test_system_and_catalog.py
data/: csut_images.csv  csut_merchants.csv  hunan_universities_images.csv  hunan_universities_merchants.csv  images.csv  merchants.csv
deploy/: production.env.example
docs/: API.md  ARCHITECTURE.md  ASSETS.md  DEPLOYMENT.md  PROJECT_EXPLANATION.md  sources.md  (+6 more)
(+114 files in other folders)
