[project]
name = "campus-food-backend"
version = "0.1.0"
description = "FastAPI backend for the Campus Foodie recommendation system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "fastapi>=0.116,<1",
  "uvicorn[standard]>=0.35,<1",
  "sqlalchemy>=2.0.40,<3",
  "pydantic-settings>=2.9,<3",
  "python-multipart>=0.0.20,<1",
  "httpx>=0.28,<1",
  "email-validator>=2.2,<3",
  "pillow>=11.3,<13",
  "alembic>=1.16,<2",
]

[project.optional-dependencies]
postgres = ["psycopg[binary]>=3.2,<4"]
redis = ["redis>=6,<7"]
dev = [
  "pytest>=8.4,<9",
  "pytest-cov>=6.2,<7",
]

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["app"]
branch = true

[tool.coverage.report]
show_missing = true
skip_covered = true
